--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="select_user">Select User</string>
     <string name="type_a_message">Type a message</string>
     <string name="online">Online</string>
+    <string name="select_srt_user">Select SRT User</string>
+    <string name="add_a_new_product">Add a New Product</string>
+    <string name="product_name">Product Name</string>
+    <string name="select">Select Category</string>
 </resources>
